projects/examples/source/02.10.cpp
////////////////////////////////////////////////////

// chapter : Basics of Programming

///////////////////////////////////////////////////////////////////////

// section : Objects and Variables

///////////////////////////////////////////////////////////////////////

// content : Implicit, Explicit and Narrowing Type Conversions
//
// content : Temporary Objects
//
// content : C-Style and C++-Style Type Conversions
//
// content : Operator static_cast

///////////////////////////////////////////////////////////////////////

// support : Boost.NumericConversion

///////////////////////////////////////////////////////////////////////

int main()
{
    double x = 1;

//  -------------------------------------------------------------------

//	[[maybe_unused]] int y1 = x; // bad

//	[[maybe_unused]] int y2 { x }; // error

//	[[maybe_unused]] int y3 { int(x) }; // bad

	[[maybe_unused]] int y4 { static_cast < int > (x) };

//  [[maybe_unused]] int y5 { static_cast < int > ("aaaaa") }; // error
}

///////////////////////////////////////////////////////////////////////